--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 
 <body>
     <h1>Tab your card</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, in! Hic facilis eveniet omnis? Earum reprehenderit inventore, nisi excepturi aperiam impedit, quis dolor quaerat quia corporis consequatur alias doloribus est!
+    </p>
     <div id="test"></div>
     <div id="test1"></div>
     <div id="test2"></div>
     <div id="test3"></div>
     <div id="test4"></div>
+    <div id="test5"></div>
     <script>
         if ('NDEFReader' in window) {
 
@@ -51,6 +55,9 @@
                 document.getElementById("test4").innerText =(`Error! Scan failed to start: ${error}.`);
             });
 
+
+        }else{
+            document.getElementById("test5").innerText = 'NO NDEFReader';
 
         }
     </script>
