--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         reprehenderit inventore, nisi excepturi aperiam impedit, quis dolor quaerat quia corporis consequatur alias
         doloribus est!
     </p>
+
+    <button id="scanButton">scan</button>
     <div id="test"></div>
     <div id="test1"></div>
     <div id="test2"></div>
