--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         doloribus est!
     </p>
 
-    <button id="scanButton">scan</button>
+    <button id="scanButton">scanButton</button>
     <div id="test"></div>
     <div id="test1"></div>
     <div id="test2"></div>
@@ -68,8 +68,9 @@
             // NFC access was previously granted, so we can start NFC scanning now.
             startScanning();
         } else {
-            // Show a "scan" button.
-            document.querySelector("#scanButton").style.display = "block";
+            document.getElementById("test5").innerText = ("clickbutton");
+
+         
             document.querySelector("#scanButton").onclick = event => {
                 // Prompt user to allow UA to send and receive info when they tap NFC devices.
                 startScanning();
