--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 };
             }
         }
+        checkStatus()
 
     } catch (error) {
         document.getElementById("test7").innerText = JSON.stringify(error);
