--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         checkStatus()
 
     } catch (error) {
-        document.getElementById("test7").innerText = JSON.stringify(error);
+        document.getElementById("test7").innerText = JSON.stringify("error", error);
 
         }
     </script>
